add vietnam geojson and provinces name and abbreviation csv

--- a/examples/index.html
+++ b/examples/index.html
@@ -175,7 +175,7 @@ queue()
       .attr('x', 12)
       .attr('y', 16)
       .style('text-anchor', 'middle')
-      .text(function(d){return d.thAbbr;});
+      .text(function(d){return d.localAbbr;});
   });
 
 // Get province name
