--- a/examples/index.html
+++ b/examples/index.html
@@ -45,13 +45,13 @@ text{
 
 <!-- raw -->
 <div class="svg-container">
-  <b>Thailand Geographic Map</b>
+  <b>Vietnam Geographic Map</b>
   <br>
   <svg id="step0"></svg>
 </div>
 <!-- collision -->
 <div class="svg-container">
-  <b>Thailand Grid Map</b><br>
+  <b>Vietnam Grid Map</b><br>
   <svg id="step1"></svg>
 </div>
 
@@ -60,10 +60,12 @@ text{
 <script>
 
 var options = {
-  rectSize: 16,
+  rectSize: 19,
   gridSize: 10,
   offsetX: -72,
-  offsetY: -24
+  offsetY: -24,
+  mapScale: 1700,
+  mapRotate: [-105.12, -16] // Customize the projection to center the map on Vietnam
 };
 
 var width = 352;
@@ -75,9 +77,8 @@ var color = d3.scale.quantize()
   .range(['#b2ddf0', '#92bcd8', '#769cbf', '#5d7da7', '#46608f', '#334577', '#232d5f']);
 
 var projection = d3.geo.mercator()
-  .scale(1700)
-  // Customize the projection to make the center of Thailand become the center of the map
-  .rotate([-100.6331, -13.2])
+  .scale(options.mapScale)
+  .rotate(options.mapRotate)
   .translate([width / 2, height / 2]);
 
 var path = d3.geo.path()
@@ -134,10 +135,10 @@ var svgs = d3.range(0,2).map(function(step){
 });
 
 queue()
-  .defer(d3.json, 'data/thailand.json')
-  .defer(d3.json, 'data/gridmap-layout-thailand.json')
-  .await(function(error, thailand, thgridmap){
-    var features = thailand.features;
+  .defer(d3.json, 'data/vietnam.json')
+  .defer(d3.json, 'data/gridmap-layout-vietnam.json')
+  .await(function(error, vietnam, vngridmap){
+    var features = vietnam.features;
 
     // Update color scale domain based on data
     color.domain([0, d3.max(features, nameLength)]);
@@ -157,30 +158,33 @@ queue()
     drawMap(svgs[0]);
 
     var sEnter = svgs[1].append('g')
-        .attr('transform', 'translate('+(8)+','+(8)+')')
+        .attr('transform', 'translate('+(46)+','+(8)+')')
       .selectAll('g')
-        .data(thgridmap)
+        .data(vngridmap)
       .enter().append('g')
-        .attr('transform', function(d){return 'translate('+(d.x*24)+','+(d.y*24)+')';});
+        .attr('transform', function(d){return 'translate('+(d.x*options.rectSize)+','+(d.y*options.rectSize)+')';});
 
     sEnter.append('rect')
-      .attr('width', 24)
-      .attr('height', 24)
+      .attr('width', options.rectSize)
+      .attr('height', options.rectSize)
       .attr('vector-effect', 'non-scaling-stroke')
       .style('opacity', 0.5)
       .style('stroke', '#aaa')
       .style('fill', function(d){return color(d.enName.length);});
 
     sEnter.append('text')
-      .attr('x', 12)
-      .attr('y', 16)
-      .style('text-anchor', 'middle')
+      .attr('x', options.rectSize * 0.5)
+      .attr('y', options.rectSize * 0.66)
+      .style({
+        'text-anchor': 'middle',
+        'font-size': options.rectSize * 0.4
+      })
       .text(function(d){return d.localAbbr;});
   });
 
 // Get province name
 function nameFn(d){
-  return d && d.properties ? d.properties.CHA_NE : null;
+  return d && d.properties ? d['properties']['NAME_1'] : null;
 }
 
 // Get province name length
